[gd_scene load_steps=5 format=3 uid="uid://cn1nul57gbvy2"]

[ext_resource type="Script" uid="uid://dxrpwta4jg328" path="res://Scripts/Enemy/enemy.gd" id="1_leowk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_govpq"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_leowk"]

[sub_resource type="BoxMesh" id="BoxMesh_leowk"]

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_leowk")
speed = 20.0
health = 20.0
aggresion = 1.0
enemy_distance = 10.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00708008, 0)
shape = SubResource("CapsuleShape3D_govpq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_leowk")
skeleton = NodePath("")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 1.5
avoidance_enabled = true
use_3d_avoidance = true

[node name="Wait timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Attack timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.387326, 0, 0, 0, 0.387326, 0, 0, 0, 0.387326, 0, 0, -1)
mesh = SubResource("BoxMesh_leowk")

[node name="E Y E S" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -1000)

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="Wait timer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="Attack timer" to="." method="_on_attack_timer_timeout"]
